test/TestPhases/parser/invalid/prevOnLiteral.blc
@[EntryPoint]
activity A()()
    var x = prev {1, 2}
end